@@ -1,9 +1,9 @@
   default: all
 
-  RELEASE_DATE := "22-May-2001"	
+  RELEASE_DATE := "25-July-2001"	
   RELEASE_MAJOR := 0
   RELEASE_MINOR := 3
-  RELEASE_SUBLEVEL := 2
+  RELEASE_SUBLEVEL := 3
   RELEASE_EXTRALEVEL := 
   RELEASE_NAME := efibootmgr
   RELEASE_STRING := $(RELEASE_NAME)-$(RELEASE_MAJOR).$(RELEASE_MINOR).$(RELEASE_SUBLEVEL)$(RELEASE_EXTRALEVEL)
